# connect-and-ping

./: .env.example  Cargo.toml
assets/: index.html  script.js
src/: app.rs  main.rs  utils.rs
src/api/: mod.rs  rest.rs  websocket.rs
